--- a/index.rmd
+++ b/index.rmd
@@ -54,7 +54,7 @@ Row
 ```{r}
 
 valueBox(value = sum(pdx_stations$num_docks_available), 
-         caption = "Total number of docks available", 
+         caption = "Total number of docks available nearby", 
          #icon = "fas fa-user-md", 
          color = "red")
 ```
