--- a/index.rmd
+++ b/index.rmd
@@ -17,7 +17,7 @@ library(leaflet)
 library(crosstalk)  # inter-widget interactivity
 library(DT)  # interactive tables
 
-# -------------- Data ------------------
+# -------------- Data ------------------s
 pdx_station_info <- 
   get_station_information("https://gbfs.biketownpdx.com/gbfs/gbfs.json")
 
@@ -39,14 +39,14 @@ pdx_free_bikes <-
                        output = "return") %>%
   select(id = bike_id, lon, lat) %>%
   mutate(num_bikes_available = 1,
-         num_docks_available = NA,
+         num_docks_available = 0,
          type = "free")
 
 pdx_full <- bind_rows(pdx_stations, pdx_free_bikes)
 
+shared_data <- SharedData$new(pdx_full)
 
 ```
-
 
 
 Sidebar {.sidebar data-width=300} 
@@ -54,115 +54,148 @@ Sidebar {.sidebar data-width=300}
 
 ### Filters
 
-```{r}
-
-showcase_df <- data.frame(c("A", "B", "A", "B", "A", "B"), c(1,5,3,2,4,1))
-colnames(showcase_df) <- c("category", "costs")
-shared_data <- SharedData$new(pdx_full)
-
-filter_select("showcase_filter", "A or B?", shared_data, showcase_df$category)
-
-valueBox(sum(pdx_full$num_bikes_available))
-
-bscols(
-  filter_checkbox(
-    id = "bike_type",
+```{r filters}
+  
+filter_checkbox(
+    id = "type",
     label = "Bikes type",
     sharedData = shared_data,
-    group = ~pdx_full$type
-  ),
-  filter_slider(
-    id = "docks_available",
-    label = "Available docs",
-    sharedData = shared_data,
-    column = ~pdx_full$num_docks_available,
-    step = 10,
-    round = TRUE,
-    sep = "",
-    ticks = FALSE
-  )
+    group = ~type
+
 )
 
+filter_slider(
+    id = "num_bikes_available",
+    label = "Available bikes",
+    sharedData = shared_data,
+    column = ~num_bikes_available,
+    step = 1,
+    round = TRUE,
+    sep = "",
+    ticks = FALSE,
+    max = max(pdx_full$num_bikes_available) + 1,
+    min = min(pdx_full$num_bikes_available) - 1
+)
+
+filter_slider(
+    id = "num_docks_available",
+    label = "Available docks",
+    sharedData = shared_data,
+    column = ~num_docks_available,
+    step = 1,
+    round = TRUE,
+    sep = "",
+    ticks = FALSE,
+    max = max(pdx_full$num_docks_available) + 1,
+    min = min(pdx_full$num_docks_available) - 1
+)
+
+
+shared_data %>% 
+  datatable(
+    extensions=c(
+      "Buttons",  # add download buttons, etc
+      "Scroller"  # for scrolling down the rows rather than pagination
+    ),
+    style="bootstrap", 
+    class="compact", 
+    width="100%",
+    options= list(
+      dom = "Blrtip",  # specify content (search box, etc)
+      deferRender = TRUE,
+      scrollY = 300,
+      scroller = TRUE,
+      buttons = list(
+        I("colvis"),  # turn columns on and off
+        "csv",  # download as .csv
+        "excel"  # download as .xlsx
+      )
+    ),
+    colnames = c(
+      "ID"="id",
+      "availabe_bikes"="num_bikes_available",
+      "availabe_dockss"="num_docks_available",
+      "type" = "type"
+    )
+    
+)
+
+
 ```
+
+
 
 Row
 -----------------------------------------------------------------------
-
-### confirmed {.value-box}
-
-```{r}
-
-valueBox(value = sum(pdx_stations$num_docks_available), 
-         caption = "Total number of docks available nearby", 
-         #icon = "fas fa-user-md", 
-         color = "green")
-```
-
-### Number_Bike {.value-box}
-
-```{r}
-
-valueBox(value = sum(pdx_stations$num_bikes_available), 
-         caption = "Total number of bike available", 
-         #icon = "fas fa-user-md", 
-         color = "blue")
-```
-
-
-Row
------------------------------------------------------------------------
-
 
 ### Interactive map
 
 ```{r}
-leaflet(pdx_full) %>% 
-  addTiles() %>% 
-  addCircleMarkers(lng=~lon,lat=~lat, radius = ~num_bikes_available, color="blue", weight=2) %>% 
-  addCircleMarkers(lng=~lon,lat=~lat, radius = ~num_docks_available, color="red", weight=2) %>% 
+
+shared_data %>% 
+  leaflet() %>% 
+  addProviderTiles(providers$OpenStreetMap) %>% 
+  addCircleMarkers(lng=~pdx_full$lon,lat=~pdx_full$lat, radius = ~pdx_full$num_bikes_available, color="blue", weight=2) %>% 
+  addCircleMarkers(lng=~pdx_full$lon,lat=~pdx_full$lat, radius = ~pdx_full$num_docks_available, color="red", weight=2) %>% 
   addAwesomeMarkers(
-    icon = awesomeIcons(
-      library = "ion",
-      icon = ifelse(
-        test = pdx_full$type == "free",
-        yes = "ion-android-star-outline",
-        no = "ion-android-radio-button-off"
-      ),
-      iconColor = "white",
-      markerColor = ifelse(
-        test = pdx_full$type == "Type", 
-        yes = "orange",
-        no = "green"
+      icon = awesomeIcons(
+        library = "ion",
+        icon = ifelse(
+          test = pdx_full$type == "free",
+          yes = "ion-android-star-outline",
+          no = ""
+        ),
+        iconColor = "white",
+        markerColor = ifelse(
+          test = pdx_full$type == "free", 
+          yes = "orange",
+          no = ""
+        )
       )
     )
-  )
-```
 
+
+```
 
 
 Row
 -----------------------------------------------------------------------
 
 
-### Datatable
-    
-```{r datatable}
-
-pdx_full %>% 
-  DT::datatable(   
-    filter = "top",  # allows filtering on each column
-    rownames = FALSE,  # remove rownames
-    style = "bootstrap",
-    class = "compact",
-    width = "100%",
-    colnames = c(
-     "ID" = "id",
-     "Lon" = "lon",
-     "Lat" = "lat",
-     "Num_Bikes" = "num_bikes_available",
-     "Num_Docks" = "num_docks_available",
-     "Type" = "type"
-   )
-  )
+### Data Table
   
+```{r data_table}
+
+shared_data %>% 
+  datatable(
+    extensions=c(
+      "Buttons",  # add download buttons, etc
+      "Scroller"  # for scrolling down the rows rather than pagination
+    ),
+    style="bootstrap", 
+    class="compact", 
+    width="100%",
+    options= list(
+      dom = "Blrtip",  # specify content (search box, etc)
+      deferRender = TRUE,
+      scrollY = 300,
+      scroller = TRUE,
+      buttons = list(
+        I("colvis"),  # turn columns on and off
+        "csv",  # download as .csv
+        "excel"  # download as .xlsx
+      )
+    ),
+    colnames = c(
+      "ID"="id",
+      "availabe_bikes"="num_bikes_available",
+      "availabe_dockss"="num_docks_available",
+      "type" = "type"
+    )
+    
+)
+
+
 ```
+
+
